# pdf-namefix

./: .gitignore  LICENSE  README.md  RELEASE_NOTES_v0.2.2.md  SPEC_PHASE18.md  pyproject.toml
docs/: AI_NAMING.md  DECISIONS.md  DEMO.md  FIRST_TIME_USER_GUIDE.md  INSTALL.md  KNOWN_LIMITATIONS.md  PACKAGING.md  PRODUCT_SCOPE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.1.3.md  RELEASE_NOTES_v0.1.4.md  RELEASE_NOTES_v0.1.5.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.3.md  ROADMAP.md  spec_architecture.md
examples/: naming-profile.example.yml
src/pdf_namefix/: ai_naming.py  ai_report_exporter.py  apply_ai_suggestions.py  apply_rename.py  classifier.py  cli.py  models.py  name_suggester.py  naming_profile.py  organizer.py  pdf_inspector.py  preview_report.py  report_exporter.py  safety.py  scanner.py  type_resolver.py  undo.py
src/pdf_namefix/app/: __init__.py  ai_suggest.py  apply.py  organize.py  preview.py  undo.py
src/pdf_namefix/domain/: __init__.py  ai_models.py  models.py  naming_profile.py
src/pdf_namefix/infrastructure/: __init__.py  ai_report_exporter.py  report_exporter.py  safety.py  type_resolver.py
tests/: test_ai_naming.py  test_ai_report_exporter.py  test_apply_ai_suggestions.py  test_apply_rename.py  test_classifier.py  test_cli.py  test_name_suggester.py  test_naming_profile.py  test_organizer.py  test_pdf_inspector.py  test_preview_report.py  test_report_exporter.py  test_safety.py  test_scanner.py  test_type_resolver.py  test_undo.py
(+8 files in other folders)
