[project]
name = "pdf-namefix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "serkansonmzz", email = "serkansonmzz@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rich>=15.0.0",
    "typer>=0.25.0",
]

[project.scripts]
pdf-namefix = "pdf_namefix.cli:app"
[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
